[package]
name = "acc"
version = "0.25.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "plaintext double-entry accounting command line tool"
keywords = ["ledger", "accounting", "finance", "money", "journal"]
categories = ["command-line-utilities", "finance", "parser-implementations", "text-processing", "value-formatting"]
repository = "https://github.com/rudolfschmidt/acc"
readme = "README.md"
include = [ "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE", "Cargo.toml", "examples/**/*" ]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
colored = "2"
crossterm = "0.28"
md5 = "0.7"
native-tls = "0.2"
ratatui = "0.29"
rayon = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["native-tls"] }
